Updated to 1.6.6, added wrappers for worlds
- Updated to 1.6.6 (duhrr)
- Added World
  - Added getWorld methods to several classes
  - Deprecated a lot of Server methods, now to be found in World
  - Added getDefaultWorld() to Server
  - Added World parameter to thunder and weather hooks, old ones are deprecated
- Fixed loadChunk
- Some minor code cleanups

All deprecated hooks/methods are backwards compatible in the default world.